--- a/main/page_home/templates/home.html
+++ b/main/page_home/templates/home.html
@@ -138,6 +138,32 @@
   </div>
 </div>
 
+<!-- About Us -->
+<div class="bg-black text-white py-5 border-bottom border-top border-warning border-2">
+  <div class="container">
+    <div class="row align-items-center">
+      <!-- About Us Image -->
+      <div class="col-12 col-md-4 mb-4 mb-md-0">
+        <div class="about-image-container">
+          <img src="{{ url_for('static', filename='images/about-us.jpeg') }}" alt="About Vintage Vault" class="img-fluid rounded shadow-lg">
+        </div>
+      </div>
+      <!-- About Us Text -->
+      <div class="col-12 col-md-8">
+        <div class="row justify-content-center text-center text-md-start">
+          <div class="col-12">
+            <h2 class="fw-bold">Thinking Of Selling Your Valuables? Let Us Handle The Details!</h2>
+            <p class="mt-4">
+            <p>Welcome to THE VINTAGE VAULT, where we connect sellers with authentic items to passionate collectors worldwide. Our mission is to provide a secure, transparent, and enjoyable auction experience.</p>
+            <p>What sets us apart is our rigorous authentication process, ensuring that every item marked as "Authenticated" has been verified by our team of experts.</p>
+            <p>Whether you're a seasoned collector or new to auctions, our platform offers an intuitive experience with detailed item descriptions, secure payment processing, and responsive customer service.</p>
+            <a href="{{ url_for('auth_page.login') }}" class="btn btn-warning mt-3 fw-bold">CREATE AN AUCTION <i class="bi bi-arrow-right fw-bold"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <!-- Scripts -->
 
 <script src="{{ url_for('static', filename='js/home.js') }}"></script>
