--- a/main/page_home/templates/home.html
+++ b/main/page_home/templates/home.html
@@ -139,7 +139,7 @@
 </div>
 
 <!-- About Us -->
-<div class="bg-black text-white py-5 border-bottom border-top border-warning border-2">
+<div class="bg-black text-white py-5 border-bottom border-top border-accent border-2">
   <div class="container">
     <div class="row align-items-center">
       <!-- About Us Image -->
@@ -152,12 +152,12 @@
       <div class="col-12 col-md-8">
         <div class="row justify-content-center text-center text-md-start">
           <div class="col-12">
-            <h2 class="fw-bold">Thinking Of Selling Your Valuables? Let Us Handle The Details!</h2>
-            <p class="mt-4">
-            <p>Welcome to THE VINTAGE VAULT, where we connect sellers with authentic items to passionate collectors worldwide. Our mission is to provide a secure, transparent, and enjoyable auction experience.</p>
+            <h2 class="fw-bold">Thinking Of Selling Your <span id="about-rotating-word-container"><span id="about-rotating-word">VALUABLES?</span><span class="blinking-cursor">|</span></span></h2>
+            <h2>Let Us Handle The Details!</h2>
+            <p class="mt-4">Welcome to THE VINTAGE VAULT, where we connect sellers with authentic items to passionate collectors worldwide. Our mission is to provide a secure, transparent, and enjoyable auction experience.</p>
             <p>What sets us apart is our rigorous authentication process, ensuring that every item marked as "Authenticated" has been verified by our team of experts.</p>
             <p>Whether you're a seasoned collector or new to auctions, our platform offers an intuitive experience with detailed item descriptions, secure payment processing, and responsive customer service.</p>
-            <a href="{{ url_for('auth_page.login') }}" class="btn btn-warning mt-3 fw-bold">CREATE AN AUCTION <i class="bi bi-arrow-right fw-bold"></i></a>
+            <a href="{{ url_for('auth_page.login') }}" class="btn btn-accent mt-3 fw-bold">CREATE AN AUCTION <i class="bi bi-arrow-right"></i></a>
           </div>
         </div>
       </div>
