--- a/main/static/css/home-styles.css
+++ b/main/static/css/home-styles.css
@@ -93,7 +93,7 @@
 }
 
 .auction-item {
-  height: 450px;
+  height: 475px;
   width: 100%;
   min-width: 255px;
   max-width: 260px;
@@ -191,10 +191,14 @@
   font-size: 1.1rem;
   margin: 0.5rem 0;
   line-height: 1.3;
+  display: block;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 100%;
+  width: 100%;
+  min-height: 1.5rem;
+  position: relative;
+  z-index: 1;
 }
 
 .bid-info {
@@ -295,14 +299,8 @@
 /* Auction titles shown with ellipses on small screens */
 @media (max-width: 576px) {
   .auction-title {
-    white-space: nowrap !important;
-    overflow: hidden !important;
-    text-overflow: ellipsis !important;
-    max-width: 100% !important;
     display: block !important;
     font-size: 1rem !important;
-    margin: 0.5rem 0 !important;
-    line-height: 1.3 !important;
   }
   
   .auction-info {
