--- a/main/page_auth/templates/update_user.html
+++ b/main/page_auth/templates/update_user.html
@@ -4,135 +4,139 @@
 
 {% block content %}
 
-<!-- Heading -->
-<h1 class="mt-5 mb-4 text-center">Update User Details</h1>
+<div class="update-backdrop">
+  <!-- Heading -->
+  <h1 class="mb-4 pt-4 text-center">Update User Details</h1>
 
-<div class="row">
-  <!-- Left Sidebar with clickable items -->
-  <div class="col-md-3">
-      <ul class="list-group">
-          <li class="list-group-item" id="username-link">Username</li>
-          <li class="list-group-item" id="email-link">Email</li>
-          <li class="list-group-item" id="password-link">Password</li>
-      </ul>
-  </div>
+  <div class="update-details-wrapper">
+    <div class="row">
+      <!-- Left Sidebar with clickable items -->
+      <div class="col-md-3">
+          <ul class="list-group update-list-group">
+              <li class="list-group-item" id="username-link">Username</li>
+              <li class="list-group-item" id="email-link">Email</li>
+              <li class="list-group-item" id="password-link">Password</li>
+          </ul>
+      </div>
 
-  <div class="col-md-9">
-    <!-- Display block ensures username form opens by default -->
-    <div id="username-form" class="form-container" style="display: block;">
-      <h3>Update Username</h3>
-      <!--Update Username-->
-      <form action="#" method="POST" name="UpdateUsername" id="update-username-form" action="{{ url_for('auth_page.update_user') }}">
-        {{ update_username_form.csrf_token(class_="form-control", id_="csrf-token-username") }}
-        <div>
-          Current username: {{ current_user.username }}
-        </div>
-        <div class="form-group">
-          <label for="new-username" class="form-label">
-            New Username
-          </label>
-          {{ update_username_form.new_username(class_="form-control required-field", placeholder="Enter a new username", id_="new-username", maxlength_="16", autocomplete="username") }}
-          {% for error in update_username_form.new_username.errors %}
-            <div class="alert alert-danger" role="alert">
-              {{ error }}
+      <div class="col-md-9 update-form-container">
+        <!-- Display block ensures username form opens by default -->
+        <div id="username-form" class="form-container" style="display: block;">
+          <h3>Update Username</h3>
+          <!--Update Username-->
+          <form action="#" method="POST" name="UpdateUsername" id="update-username-form" action="{{ url_for('auth_page.update_user') }}">
+            {{ update_username_form.csrf_token(class_="form-control", id_="csrf-token-username") }}
+            <h5>
+              Current username: {{ current_user.username }}
+            </h5>
+            <div class="form-group">
+              <label for="new-username" class="form-label">
+                New Username
+              </label>
+              {{ update_username_form.new_username(class_="form-control required-field", placeholder="Enter a new username", id_="new-username", maxlength_="16", autocomplete="username") }}
+              {% for error in update_username_form.new_username.errors %}
+                <div class="alert alert-danger" role="alert">
+                  {{ error }}
+                </div>
+              {% endfor %}
             </div>
-          {% endfor %}
-        </div>
-        <div class="form-group">
-          <label for="current-password" class="form-label">
-            Please enter your current password to confirm changes:
-          </label>
-          {{ update_username_form.current_password(class_="form-control required-field", placeholder="Enter your current password", id_="current-password", autocomplete="current-password") }}
-          {% for error in update_username_form.current_password.errors %}
-            <div class="alert alert-danger" role="alert">
-              {{ error }}
+            <div class="form-group">
+              <label for="current-password" class="form-label">
+                Password
+              </label>
+              {{ update_username_form.current_password(class_="form-control required-field", placeholder="Enter your password", id_="current-password", autocomplete="current-password") }}
+              {% for error in update_username_form.current_password.errors %}
+                <div class="alert alert-danger" role="alert">
+                  {{ error }}
+                </div>
+              {% endfor %}
             </div>
-          {% endfor %}
+            <div class="form-group">
+              {{ update_username_form.submit(class_="btn btn-primary", id_="submit-username") }}
+            </div>
+          </form>
         </div>
-        <div class="form-group">
-          {{ update_username_form.submit(class_="btn btn-primary", id_="submit-username") }}
-        </div>
-      </form>
-    </div>
 
-    <!--Update Email-->
-    <div id="email-form" class="form-container" style="display: none;">
-      <h3>Update Email</h3>
-      <form action="#" method="POST" name="UpdateEmail" id="update-email-form" action="{{ url_for('auth_page.update_user') }}">
-        {{ update_email_form.csrf_token(class_="form-control", id_="csrf-token-email") }}
-        <div>
-          Current email: {{ masked_email }}
-        </div>
-        <div class="form-group">
-          <label for="new-email" class="form-label">
-            New Email
-          </label>
-          {{ update_email_form.new_email(class_="form-control required-field", placeholder="Enter your new email", id_="new-email", maxlength_="50", autocomplete="email") }}
-          {% for error in update_email_form.new_email.errors %} 
-            <div class="alert alert-danger" role="alert">
-              {{ error }}
+        <!--Update Email-->
+        <div id="email-form" class="form-container" style="display: none;">
+          <h3>Update Email</h3>
+          <form action="#" method="POST" name="UpdateEmail" id="update-email-form" action="{{ url_for('auth_page.update_user') }}">
+            {{ update_email_form.csrf_token(class_="form-control", id_="csrf-token-email") }}
+            <h5>
+              Current email: {{ masked_email }}
+            </h5>
+            <div class="form-group">
+              <label for="new-email" class="form-label">
+                New Email
+              </label>
+              {{ update_email_form.new_email(class_="form-control required-field", placeholder="Enter your new email", id_="new-email", maxlength_="50", autocomplete="email") }}
+              {% for error in update_email_form.new_email.errors %} 
+                <div class="alert alert-danger" role="alert">
+                  {{ error }}
+                </div>
+              {% endfor %}
             </div>
-          {% endfor %}
-        </div>
-        <div class="form-group">
-          <label for="current-password-email" class="form-label">
-            Please enter your current password to confirm changes:
-          </label>
-          {{ update_email_form.current_password(class_="form-control required-field", placeholder="Enter your current password", id_="current-password-email", autocomplete="current-password") }}
-          {% for error in update_email_form.current_password.errors %} 
-            <div class="alert alert-danger" role="alert">
-              {{ error }}
+            <div class="form-group">
+              <label for="current-password-email" class="form-label">
+                Password
+              </label>
+              {{ update_email_form.current_password(class_="form-control required-field", placeholder="Enter your password", id_="current-password-email", autocomplete="current-password") }}
+              {% for error in update_email_form.current_password.errors %} 
+                <div class="alert alert-danger" role="alert">
+                  {{ error }}
+                </div>
+              {% endfor %}
             </div>
-          {% endfor %}
+            <div class="form-group">
+              {{ update_email_form.submit(class_="btn btn-primary", id_="submit-email") }}
+            </div>
+          </form>
         </div>
-        <div class="form-group">
-          {{ update_email_form.submit(class_="btn btn-primary", id_="submit-email") }}
-        </div>
-      </form>
-    </div>
 
-    <!--Update Password-->
-    <div id="password-form" class="form-container" style="display: none;">
-      <h3>Update Password</h3>
-      <form action="#" method="POST" name="UpdatePassword" id="update-password-form" action="{{ url_for('auth_page.update_user') }}">
-        {{ update_password_form.csrf_token(class_="form-control", id_="csrf-token-password") }}
-        <div class="form-group">
-          <label for="current-password-password" class="form-label">
-            Current Password
-          </label>
-          {{ update_password_form.current_password(class_="form-control required-field", placeholder="Enter your current password", id_="current-password-password", autocomplete="current-password") }}
-          {% for error in update_password_form.current_password.errors %} 
-            <div class="alert alert-danger" role="alert">
-              {{ error }}
+        <!--Update Password-->
+        <div id="password-form" class="form-container" style="display: none;">
+          <h3>Update Password</h3>
+          <form action="#" method="POST" name="UpdatePassword" id="update-password-form" action="{{ url_for('auth_page.update_user') }}">
+            {{ update_password_form.csrf_token(class_="form-control", id_="csrf-token-password") }}
+            <div class="form-group">
+              <label for="current-password-password" class="form-label">
+                Current Password
+              </label>
+              {{ update_password_form.current_password(class_="form-control required-field", placeholder="Enter your current password", id_="current-password-password", autocomplete="current-password") }}
+              {% for error in update_password_form.current_password.errors %} 
+                <div class="alert alert-danger" role="alert">
+                  {{ error }}
+                </div>
+              {% endfor %}
             </div>
-          {% endfor %}
-        </div>
-        <div class="form-group">
-          <label for="new-password" class="form-label">
-            New Password
-          </label>
-          {{ update_password_form.new_password(class_="form-control required-field", placeholder="Enter a new password", id_="new-password", minlength_="8", maxlength_="24", autocomplete="new-password") }}
-          {% for error in update_password_form.new_password.errors %} 
-            <div class="alert alert-danger" role="alert">
-              {{ error }}
+            <div class="form-group">
+              <label for="new-password" class="form-label">
+                New Password
+              </label>
+              {{ update_password_form.new_password(class_="form-control required-field", placeholder="Enter a new password", id_="new-password", minlength_="8", maxlength_="24", autocomplete="new-password") }}
+              {% for error in update_password_form.new_password.errors %} 
+                <div class="alert alert-danger" role="alert">
+                  {{ error }}
+                </div>
+              {% endfor %}
             </div>
-          {% endfor %}
-        </div>
-        <div class="form-group">
-          <label for="confirm-password" class="form-label">
-            Confirm New Password
-          </label>
-          {{ update_password_form.confirm_password(class_="form-control required-field", placeholder="Confirm your new password", id_="confirm-password", minlength_="8", maxlength_="24", autocomplete="new-password") }}
-          {% for error in update_password_form.confirm_password.errors %} 
-            <div class="alert alert-danger" role="alert">
-              {{ error }}
+            <div class="form-group">
+              <label for="confirm-password" class="form-label">
+                Confirm New Password
+              </label>
+              {{ update_password_form.confirm_password(class_="form-control required-field", placeholder="Confirm your new password", id_="confirm-password", minlength_="8", maxlength_="24", autocomplete="new-password") }}
+              {% for error in update_password_form.confirm_password.errors %} 
+                <div class="alert alert-danger" role="alert">
+                  {{ error }}
+                </div>
+              {% endfor %}
             </div>
-          {% endfor %}
+            <div class="form-group">
+              {{ update_password_form.submit(class_="btn btn-primary", id_="submit-password") }}
+            </div>
+          </form>
         </div>
-        <div class="form-group">
-          {{ update_password_form.submit(class_="btn btn-primary", id_="submit-password") }}
-        </div>
-      </form>
+      </div>
     </div>
   </div>
 </div>
